--- a/style/responsive.css
+++ b/style/responsive.css
@@ -22,4 +22,7 @@
         flex-direction: column;
         align-items: flex-start;
     }
+    header.transparencia {
+        background: var(--preto);
+    }
 }
